# flux

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/flux-adapters/: Cargo.toml
crates/flux-adapters/src/: lib.rs
crates/flux-adapters/src/gitlab/: dto.rs  gateway.rs  mod.rs
crates/flux-adapters/src/sqlite/: app_tracking_repository.rs  mod.rs  session_metrics_repository.rs  session_repository.rs
crates/flux-adapters/src/testing/: failing_gateway.rs  mod.rs  stub_gateway.rs
crates/flux-cli/: Cargo.toml
crates/flux-cli/src/: client.rs  daemon_launcher.rs  main.rs
crates/flux-cli/src/commands/: clear.rs  dashboard.rs  delete.rs  digest.rs  distractions.rs  init.rs  lang.rs  mod.rs  pause.rs  profile.rs  resume.rs  start.rs  stats.rs  status.rs  stop.rs  suggestions.rs  update.rs
crates/flux-core/: Cargo.toml
crates/flux-core/src/: config.rs  lib.rs  secrets.rs  state.rs
crates/flux-core/src/domain/: app_usage.rs  digest_stats.rs  focus_mode.rs  mod.rs  review_event.rs  session.rs  session_metrics.rs  suggestion.rs
crates/flux-core/src/i18n/: language.rs  mod.rs  translations.rs
crates/flux-core/src/i18n/locales/: en.toml  fr.toml
crates/flux-core/src/ports/: app_tracking_repository.rs  mod.rs  review_activity_gateway.rs  session_metrics_repository.rs  session_repository.rs
crates/flux-daemon/: Cargo.toml
crates/flux-daemon/examples/: ping.rs
crates/flux-daemon/src/: main.rs  server.rs
crates/flux-daemon/src/actors/: app_tracker.rs  digest_scheduler.rs  mod.rs  notifier.rs  timer.rs  tray.rs
crates/flux-daemon/src/window/: mod.rs  x11_detector.rs
crates/flux-gui/: Cargo.toml
crates/flux-gui/src/: app.rs  client.rs  data.rs  main.rs  theme.rs
crates/flux-gui/src/views/: chart.rs  history.rs  mod.rs  overview.rs  session_control.rs
crates/flux-protocol/: Cargo.toml
crates/flux-protocol/src/: lib.rs
docs/adr/: 000-template.md  001-gestion-secrets.md  001-secrets-management.md  002-contrainte-rust-1-75.md  002-rust-1-75-constraint.md  003-tray-icon-crate.md
docs/specs/: 001-i18n-mechanism.md  002-french-translation.md  003-tray-icon-infrastructure.md  004-tray-visual-states.md  005-tray-tooltip.md  006-tray-context-menu.md  007-init-command.md  008-update-command.md
