[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Damien"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
interprocess = { version = "2.2", features = ["tokio"] }
libc = "0.2"
async-trait = "0.1"
chrono = { version = "0.4.31", features = ["serde"] }
ureq = { version = "2.9.1", features = ["json"] }
futures = "0.3"
dirs = "5.0"
toml = "0.8"
notify-rust = "=4.8.0"
flux-core = { path = "crates/flux-core" }
