[package]
name = "flux-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
flux-core.workspace = true
async-trait.workspace = true
chrono.workspace = true
ureq.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
