[package]
name = "flux-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
bincode.workspace = true
thiserror.workspace = true
interprocess.workspace = true
libc.workspace = true
flux-protocol = { path = "../flux-protocol" }
