[package]
name = "flux-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "flux"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
bincode.workspace = true
thiserror.workspace = true
interprocess.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
dirs.workspace = true
flux-protocol = { path = "../flux-protocol" }
flux-core = { path = "../flux-core" }
flux-adapters = { path = "../flux-adapters" }
which.workspace = true
dialoguer.workspace = true
toml.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
