[package]
name = "flux-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
interprocess.workspace = true
bincode.workspace = true
serde.workspace = true
notify-rust.workspace = true
flux-protocol = { path = "../flux-protocol" }
flux-core = { path = "../flux-core" }

[target.'cfg(unix)'.dependencies]
libc.workspace = true
